--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sass": "^1.69.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "svg-url-loader": "^8.0.0",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
