--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "framer-motion": "^10.16.4",
     "html-webpack-plugin": "^5.5.3",
     "prettier": "^3.0.3",
     "sass": "^1.69.0",
